# The-Light-on-the-Way-Back

./: .gitignore  LICENSE  README.md  README_EN.md  main.py  pyproject.toml  start_server.py  test_app.py
templates/: base.html  facade_gallery.html  index.html  time_capsule.html
the_light_on_the_way_back/: __init__.py  app.py  config.py  database.py  encryption.py  models.py  scheduler.py
the_light_on_the_way_back/routers/: __init__.py  facade_gallery.py  main.py  time_capsule.py
the_light_on_the_way_back/services/: __init__.py  facade_gallery.py  time_capsule.py
